--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "edge-config"
 version = "0.1.0"
+license = "MIT"
+description = "Vercel Edge Config for Rust"
+repository = "https://github.com/skve/edge-config"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
